# auto_files_bkup

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  auto_files_bkup  install  install.sh  main.cpp  uninstall  uninstall.sh
include/: ConfigReader.h  ConfigReader.hpp  Transfer.h  helpers.h
lib/: ConfigReader.cpp  Transfer.cpp
src/: ConfigReader.cpp  ConfigReader.hpp  Reader.hpp  Transfer.cpp  helpers.hpp  main.cpp
test/: .gitignore  CMakeLists.txt  TestConfigReader.cpp  auto_bkup_configs.txt  main.cpp
